--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -6,15 +6,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     
-    strategy:
-      matrix:
-        node-version: [8.x, 10.x, 12.x]
-    
     steps:
     - uses: actions/checkout@master
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@master
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '12'
     - run: npm install git+https://github.com/WkoD/TiddlyDnD.git
     - run: tiddlywiki --version
