--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -13,4 +13,11 @@ jobs:
       with:
         node-version: '12'
     - run: npm install git+https://github.com/WkoD/TiddlyDnD.git
-    - run: $(npm bin)/tiddlywiki --version
+    - run: $(npm bin)/tiddlywiki --output . --build index
+    - name: push index
+      run: |
+        git config user.name "$GITHUB_ACTOR"
+        git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+        git add index.html
+        git commit -m "Index aktualisiert"
+        git push
