changed directory names

--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -16,9 +16,10 @@ jobs:
       with:
         node-version: '12'
     - run: npm install git+https://github.com/WkoD/TiddlyDnD.git
-    - run: $(npm bin)/tiddlywiki --output ./public --build index
+    - run: $(npm bin)/tiddlywiki --output ./twpage --build index
     - name: Deploy Index
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./public
+        publish_dir: ./twpage
+        keep_files: true
