--- a/.github/workflows/npm-build-pages.yml
+++ b/.github/workflows/npm-build-pages.yml
@@ -22,17 +22,17 @@ jobs:
         node-version: '12'
     - name: Install TiddlyDnD
       run: npm install git+https://github.com/WkoD/TiddlyDnD.git
-    - name: Build TiddlyWiki index.html
-      run: $(npm bin)/tiddlywiki --output ./twpage --build index
-    - if: github.ref != 'refs/heads/master'
-      name: Rename index.html for branches other than master
-      run: mv ./twpage/index.html ./twpage/${{ steps.extract_branch.outputs.branch }}.html
     - if: github.ref != 'refs/heads/master'
       name: Update SiteTitle.tid for branches other than master
       run: echo " ${{ steps.extract_branch.outputs.branch }}" >> ./tiddlers/$__SiteTitle.tid
+    - name: Build TiddlyWiki index.html
+      run: $(npm bin)/tiddlywiki --output . --build index
+    - if: github.ref != 'refs/heads/master'
+      name: Rename index.html for branches other than master
+      run: mv ./index.html ./${{ steps.extract_branch.outputs.branch }}.html
     - name: Deploy to gh_pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./twpage
-        keep_files: true
+        publish_dir: ./
+        exclude_assets: '.github,tiddlers,tiddlywiki.info'
