--- a/.github/workflows/npm-build-pages.yml
+++ b/.github/workflows/npm-build-pages.yml
@@ -31,8 +31,8 @@ jobs:
       name: Rename index.html for branches other than master
       run: mv ./index.html ./${{ steps.extract_branch.outputs.branch }}.html
     - name: Deploy to gh_pages
-      uses: peaceiris/actions-gh-pages@v3
+      uses: peaceiris/actions-gh-pages@v3.6.4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./
-        exclude_assets: '.github,tiddlers,tiddlywiki.info'
+        exclude_assets: '.github,node_modules,tiddlers,package-lock.json,tiddlywiki.info'
