--- a/.github/workflows/npm-build-pages.yml
+++ b/.github/workflows/npm-build-pages.yml
@@ -22,6 +22,8 @@ jobs:
     - name: Merge draft
       run: |
         git merge origin/draft
+    - name: Update SiteTitle.tid for draft
+      run: echo " DRAFT" >> ./tiddlers/$__SiteTitle.tid
     - name: Build TiddlyWiki draft index.html
       run: $(npm bin)/tiddlywiki --output ./temp --build index
     - name: Move draft index.html
