--- a/.github/workflows/npm-build-pages.yml
+++ b/.github/workflows/npm-build-pages.yml
@@ -21,6 +21,7 @@ jobs:
       run: $(npm bin)/tiddlywiki --output ./twpage --build index
     - name: Merge draft
       run: |
+        git fetch origin/draft
         git merge origin/draft
     - name: Update SiteTitle.tid for draft
       run: echo " DRAFT" >> ./tiddlers/$__SiteTitle.tid
