--- a/.github/workflows/npm-build-pages.yml
+++ b/.github/workflows/npm-build-pages.yml
@@ -11,8 +11,6 @@ jobs:
     
     steps:
     - uses: actions/checkout@master
-      with:
-        fetch-depth: 0
     - name: Use Node.js
       uses: actions/setup-node@master
       with:
@@ -23,7 +21,7 @@ jobs:
       run: $(npm bin)/tiddlywiki --output ./twpage --build index
     - name: Merge draft
       run: |
-        git merge origin/draft
+        git pull 'https://github.com/$GITHUB_REPOSITORY.git' draft
     - name: Update SiteTitle.tid for draft
       run: echo " DRAFT" >> ./tiddlers/$__SiteTitle.tid
     - name: Build TiddlyWiki draft index.html
