--- a/.github/workflows/npm-build-pages.yml
+++ b/.github/workflows/npm-build-pages.yml
@@ -23,6 +23,8 @@ jobs:
       run: $(npm bin)/tiddlywiki --output ./twpage --build index
     - name: Merge draft
       run: |
+        git config user.name "$GITHUB_ACTOR"
+        git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
         git merge origin/draft
     - name: Update SiteTitle.tid for draft
       run: echo " DRAFT" >> ./tiddlers/$__SiteTitle.tid
