--- a/.github/workflows/npm-build-pages.yml
+++ b/.github/workflows/npm-build-pages.yml
@@ -32,17 +32,10 @@ jobs:
       run: $(npm bin)/tiddlywiki --output ./temp --build index
     - name: Move draft index.html
       run: mv ./temp/index.html ./twpage/draft.html
-    - name: Link resource directories
+    - name: Copy resource directories
       run: |
-        mv ./Ereignis ./twpage/Ereignis
-        mv ./Gegenstand ./twpage/Gegenstand
-        mv ./Karte ./twpage/Karte
-        mv ./Ort ./twpage/Ort
-        mv ./Person ./twpage/Person
-        mv ./Spieler ./twpage/Spieler
-    - name: Clean
-      run: |
-        rm -rf node_modules/gh-pages/.cache
+        cp -rl ./data ./twpage/data
+        cp -rl ./images ./twpage/images
     - name: Deploy to gh_pages
       uses: peaceiris/actions-gh-pages@v3
       with:
