--- a/.github/workflows/npm-build-pages.yml
+++ b/.github/workflows/npm-build-pages.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - draft
 
 jobs:
   build:
@@ -12,6 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
       with:
+        ref: master
         fetch-depth: 0
     - name: Use Node.js
       uses: actions/setup-node@master
