--- a/.github/workflows/dispatch-build-pages.yml
+++ b/.github/workflows/dispatch-build-pages.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - name: Dispatch to master
       run: |
-        curl -X POST https://api.github.com/repos/$GITHUB_REPOSITORY/dispatches \
+        curl -X POST "https://api.github.com/repos/$GITHUB_REPOSITORY_NAME/dispatches" \
         -H 'Accept: application/vnd.github.everest-preview+json' \
         -u ${{ secrets.GITHUB_TOKEN }} \
         --data '{"event_type": "update" }'
