--- a/.github/workflows/dispatch-build-pages.yml
+++ b/.github/workflows/dispatch-build-pages.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - name: Dispatch to master
       run: |
-        curl -X POST "https://api.github.com/repos/${{ github.repository }}/dispatches" \
-        -H 'Accept: application/vnd.github.everest-preview+json' \
-        -u ${{ secrets.GITHUB_TOKEN }} \
-        --data '{"event_type": "build" }'
+        curl -X POST \
+        "https://api.github.com/repos/${{ github.repository }}/actions/workflows/npm-build-pages.yml/dispatches" \
+        -H 'Accept: application/vnd.github.v3+json' \
+        -d '{"ref":"ref"}'
