--- a/.github/workflows/dispatch-build-pages.yml
+++ b/.github/workflows/dispatch-build-pages.yml
@@ -15,4 +15,5 @@ jobs:
         curl -X POST \
         "https://api.github.com/repos/${{ github.repository }}/actions/workflows/npm-build-pages.yml/dispatches" \
         -H 'Accept: application/vnd.github.v3+json' \
+        -u ${{ secrets.GITHUB_TOKEN }} \
         -d '{"ref":"ref"}'
