--- a/.github/workflows/dispatch-build-pages.yml
+++ b/.github/workflows/dispatch-build-pages.yml
@@ -16,4 +16,4 @@ jobs:
         "https://api.github.com/repos/${{ github.repository }}/actions/workflows/npm-build-pages.yml/dispatches" \
         -H 'Accept: application/vnd.github.v3+json' \
         -u ${{ secrets.DISPATCH_PAT }} \
-        -d '{"ref":"ref"}'
+        -d '{"ref":"draft"}'
