--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -5,8 +5,9 @@ on:
 
 jobs:
   repo-merge:
-    if: ${{ github.repository }} != 'WkoD/DnDWiki'
     runs-on: ubuntu-latest
+    
+    if: ${{ github.repository }} != 'WkoD/DnDWiki'
     steps:
     - uses: actions/checkout@master
       with:
@@ -25,3 +26,10 @@ jobs:
         git checkout draft
         git pull 'https://github.com/WkoD/DnDWiki.git' draft
         git push origin draft
+    - name: Dispatch to master
+      run: |
+        curl -X POST \
+        "https://api.github.com/repos/${{ github.repository }}/actions/workflows/npm-build-pages.yml/dispatches" \
+        -H 'Accept: application/vnd.github.v3+json' \
+        -u ${{ secrets.DISPATCH_PAT }} \
+        -d '{"ref":"master"}'
