--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -17,12 +17,15 @@ jobs:
       run: |
         git config user.name "$GITHUB_ACTOR"
         git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+        git remote set-url origin https://WkoD:${{ secrets.DISPATCH_PAT }}@github.com/${{ github.repository }}.git
+        git checkout master
         git pull 'https://github.com/WkoD/DnDWiki.git' master
         git push origin master
     - name: merge draft
       run: |
         git config user.name "$GITHUB_ACTOR"
         git config user.email
+        git remote set-url origin https://WkoD:${{ secrets.DISPATCH_PAT }}@github.com/${{ github.repository }}.git
         git checkout draft
         git pull 'https://github.com/WkoD/DnDWiki.git' draft
         git push origin draft
