--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -5,9 +5,9 @@ on:
 
 jobs:
   repo-merge:
+    if: github.repository != 'WkoD/DnDWiki'
     runs-on: ubuntu-latest
     
-    if: ${{ github.repository }} != 'WkoD/DnDWiki'
     steps:
     - uses: actions/checkout@master
       with:
@@ -17,7 +17,7 @@ jobs:
       run: |
         git config user.name "$GITHUB_ACTOR"
         git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-        git remote set-url origin https://WkoD:${{ secrets.DISPATCH_PAT }}@github.com/${{ github.repository }}.git
+        git remote set-url origin 'https://WkoD:${{ secrets.DISPATCH_PAT }}@github.com/${{ github.repository }}.git'
         git checkout master
         git pull 'https://github.com/WkoD/DnDWiki.git' master
         git push origin master
@@ -25,7 +25,7 @@ jobs:
       run: |
         git config user.name "$GITHUB_ACTOR"
         git config user.email
-        git remote set-url origin https://WkoD:${{ secrets.DISPATCH_PAT }}@github.com/${{ github.repository }}.git
+        git remote set-url origin 'https://WkoD:${{ secrets.DISPATCH_PAT }}@github.com/${{ github.repository }}.git'
         git checkout draft
         git pull 'https://github.com/WkoD/DnDWiki.git' draft
         git push origin draft
