--- a/.github/workflows/npm-build-pages.yml
+++ b/.github/workflows/npm-build-pages.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Update SiteTitle.tid for master
       run: echo '${{ github.event.repository.name }}' >> './tiddlers/$__SiteTitle.tid'
     - name: Update SiteSubtitle.tid with timestamp
-      run: echo $(TZ=Europe/Berlin date +'%Y-%m-%dT%H:%M:%S') >> './tiddlers/$__SiteSubtitle.tid'
+      run: echo $(TZ=Europe/Berlin date +'%Y%m%d%H%M%S%3N') >> './tiddlers/$__SiteSubtitle.tid'
     - name: Build TiddlyWiki master index.html
       run: $(npm bin)/tiddlywiki --output ./twpage --build index
     - name: Merge draft
