removed .keep files from deployment and added Illusia dispatch

--- a/.github/workflows/npm-build-pages.yml
+++ b/.github/workflows/npm-build-pages.yml
@@ -21,12 +21,11 @@ jobs:
         node-version: '12'
     - name: Install TiddlyDnD
       run: npm install git+https://github.com/WkoD/TiddlyDnD.git
-    - name: Update SiteTitle.tid for master
-      run: echo '${{ github.event.repository.name }}' >> './tiddlers/$__SiteTitle.tid'
-    - name: Update SiteSubtitle.tid with timestamp
-      run: echo $(TZ=Europe/Berlin date +'%Y-%m-%dT%H:%M:%S') >> './tiddlers/$__SiteSubtitle.tid'
-    - name: Update ExportModified_modified with timestamp
-      run: echo $(date +'%Y%m%d%H%M%S%3N') >> './tiddlers/$___my_Button_ExportModified_modified.tid'
+    - name: Update master
+      run: |
+        echo '${{ github.event.repository.name }}' >> './tiddlers/$__SiteTitle.tid'
+        echo $(TZ=Europe/Berlin date +'%Y-%m-%dT%H:%M:%S') >> './tiddlers/$__SiteSubtitle.tid'
+        echo $(date +'%Y%m%d%H%M%S%3N') >> './tiddlers/$___my_Button_ExportModified_modified.tid'
     - name: Build TiddlyWiki master index.html
       run: $(npm bin)/tiddlywiki --output ./twpage --build index
     - name: Merge draft
@@ -34,8 +33,10 @@ jobs:
         git config user.name "$GITHUB_ACTOR"
         git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
         git merge origin/draft
-    - name: Update SiteTitle.tid for draft
-      run: echo " DRAFT" >> './tiddlers/$__SiteTitle.tid'
+    - name: Update draft
+      run: |
+        echo " DRAFT" >> './tiddlers/$__SiteTitle.tid'
+        rm './tiddlers/.keep'
     - name: Build TiddlyWiki draft index.html
       run: $(npm bin)/tiddlywiki --output ./temp --build index
     - name: Move draft index.html
@@ -44,6 +45,7 @@ jobs:
       run: |
         cp -rl ./data ./twpage/data
         cp -rl ./images ./twpage/images
+        find ./twpage -type f -name '.keep' -exec rm {} +
     - name: Deploy to gh_pages
       uses: peaceiris/actions-gh-pages@v3
       with:
@@ -56,7 +58,7 @@ jobs:
     
     strategy:
       matrix:
-        downstream: ['WkoD/DnDWiki-Vandalia']
+        downstream: ['WkoD/DnDWiki-Vandalia', 'WkoD/DnDWiki-Illusia']
     
     steps:
     - uses: actions/checkout@master
