--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -17,16 +17,19 @@ jobs:
       run: |
         git config user.name "$GITHUB_ACTOR"
         git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+        git remote set-url origin 'https://WkoD:${{ secrets.DISPATCH_PAT }}@github.com/${{ github.repository }}.git'
         git checkout master
         git pull 'https://github.com/WkoD/DnDWiki.git' master
-        git push 'https://WkoD:${{ secrets.DISPATCH_PAT }}@github.com/${{ github.repository }}.git' master
+        git remote -v
+        git push origin master
     - name: merge draft
       run: |
         git config user.name "$GITHUB_ACTOR"
         git config user.email
+        git remote set-url origin 'https://WkoD:${{ secrets.DISPATCH_PAT }}@github.com/${{ github.repository }}.git'
         git checkout draft
         git pull 'https://github.com/WkoD/DnDWiki.git' draft
-        git push 'https://WkoD:${{ secrets.DISPATCH_PAT }}@github.com/${{ github.repository }}.git' draft
+        git push origin draft
     - name: Dispatch to master
       run: |
         curl -X POST \
