--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -18,10 +18,11 @@ jobs:
         git config user.name "$GITHUB_ACTOR"
         git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
         git remote set-url origin 'https://WkoD:${{ secrets.DISPATCH_PAT }}@github.com/${{ github.repository }}.git'
+        git remote add target 'git@github.com:${{ github.repository }}.git'
         git checkout master
         git pull 'https://github.com/WkoD/DnDWiki.git' master
         git remote -v
-        git push origin master
+        git push -u target master
     - name: merge draft
       run: |
         git config user.name "$GITHUB_ACTOR"
