--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -12,6 +12,7 @@ jobs:
     - uses: actions/checkout@master
       with:
         ref: master
+        persist-credentials: false
         fetch-depth: 0
     - name: merge master
       run: |
