--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -21,7 +21,7 @@ jobs:
         git remote set-url origin 'https://WkoD:${{ secrets.DISPATCH_PAT }}@github.com/${{ github.repository }}.git'
         git checkout master
         git pull 'https://github.com/WkoD/DnDWiki.git' master
-        git push origin master
+        git push 'https://WkoD:${{ secrets.DISPATCH_PAT }}@github.com/${{ github.repository }}.git' master
     - name: merge draft
       run: |
         git config user.name "$GITHUB_ACTOR"
