--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -37,5 +37,6 @@ jobs:
         -H 'Accept: application/vnd.github.v3+json' \
         -u ${{ secrets.DISPATCH_PAT }} \
         -d '{"ref":"master"}'
-    - run: |
-      echo "Debug2"
+    - name: Debug
+      run: |
+        echo "Debug2"
