--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -12,7 +12,6 @@ jobs:
     - uses: actions/checkout@master
       with:
         ref: master
-        persist-credentials: false
         fetch-depth: 0
     - name: merge master
       run: |
@@ -21,7 +20,7 @@ jobs:
         git remote set-url origin 'https://WkoD:${{ secrets.DISPATCH_PAT }}@github.com/${{ github.repository }}.git'
         git checkout master
         git pull 'https://github.com/WkoD/DnDWiki.git' master
-        git push 'https://WkoD:${{ secrets.DISPATCH_PAT }}@github.com/${{ github.repository }}.git' master
+        git push origin master
     - name: merge draft
       run: |
         git config user.name "$GITHUB_ACTOR"
@@ -37,6 +36,3 @@ jobs:
         -H 'Accept: application/vnd.github.v3+json' \
         -u ${{ secrets.DISPATCH_PAT }} \
         -d '{"ref":"master"}'
-    - name: Debug
-      run: |
-        echo "Debug3"
