--- a/.github/workflows/npm-build-pages.yml
+++ b/.github/workflows/npm-build-pages.yml
@@ -32,7 +32,7 @@ jobs:
       run: |
         git config user.name "$GITHUB_ACTOR"
         git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-        git merge origin/draft
+        git merge origin/draft --allow-unrelated-histories
     - name: Update draft
       run: |
         echo " DRAFT" >> './tiddlers/$__SiteTitle.tid'
